syntax = "proto3";

package protos.user;
option go_package = "protos";

message User {
    string userId = 1;
    string sessionId = 2;
    string account = 3;
    string nickname = 4;
    string phone = 5;
    string email = 6;
    string photo = 7;
    string createdAt = 8;
    bool online = 9;
}