syntax = "proto3";
package protos.login;
import "user.proto";
option go_package = "protos";


service Login {
    rpc login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string userId = 1;//用户ID
    string account = 2;//账号，可以是昵称，邮箱或者手机号
    string password = 3;//密码
    string device = 4;//设备
}

message LoginResponse {
    string message = 2;//状态消息
    int32 code = 3;//状态码
    protos.user.User user = 4;
    int32 status = 5;// 请求状态 0失败，1成功
}

